<resources>
    <string name="app_name">GitHub User Api</string>
    <string name="user_detail">User Detail</string>
    <string name="user_profile_picture">Profile Picture</string>
    <string name="username_user">Username</string>
    <string name="name_user">Name</string>
    <string name="follower_user">Followers</string>
    <string name="following_user">Following</string>
    <string name="company_user">Company</string>
    <string name="location_user">Location</string>
    <string name="repository_user">Repository</string>
    <string name="search">Search</string>
    <string name="tab">Tab</string>
    <string name="img_start">searching first</string>
    <string name="not_found">Not Found</string>
    <string name="search_hint">Enter User Name</string>
    <string name="app_type">Type</string>
    <string name="desc">Image</string>
    <string name="follow">Follow</string>
    <string name="bio">bio</string>
    <string name="unfollow">Unfollow</string>
</resources>