<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_detail_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/user_profile_picture"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/name_user"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_user"
                android:textSize="16sp"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/tv_detail_bio"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/bt_follow"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:text="@string/follow"
                android:backgroundTint="@color/bg_gray_200"/>

            <ProgressBar
                android:id="@+id/progress_bar_detail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_detail_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower_user"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_people"/>

            <TextView
                android:id="@+id/tv_detail_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:gravity="center_horizontal"
                android:text="@string/company_user"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_company" />

            <TextView
                android:id="@+id/tv_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawablePadding="2dp"
                android:gravity="center_horizontal"
                android:text="@string/location_user"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/tv_detail_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawablePadding="2dp"
                android:gravity="center_horizontal"
                android:text="@string/repository_user"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_repository" />



        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="4dp"
            android:background="@color/bg_gray_200"
            android:contentDescription="@string/tab"
            app:tabBackground="@drawable/tab_layout_selector"
            app:tabIndicatorColor="@color/orange"
            app:tabSelectedTextColor="@color/orange"
            app:tabTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>